--- a/cookie.html
+++ b/cookie.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perpustakaan Aura</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+<header class="header">
+  <div class="logo-left">
+    <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Logo Buku">
+  </div>
+
+  <div class="center-title">PERPUSTAKAAN AURA</div>
+
+  <button class="burger" onclick="toggleMenu()">☰</button>
+</header>
+
+<nav class="main-nav menu-links">
+  <a href="beranda.html">Beranda</a>
+  <a class="nav-link" href="Tentang-saya.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Pelajari lebih lanjut tentang saya di sini">Tentang Saya</a>
+  <a href="Hubungi-kami.html">Hubungi Kami</a>
+ <div class="dropdown">
+<a href="koleksi.html" class="dropdown-toggle" onclick="toggleDropdown(event)">Koleksi</a>
+  <ul class="dropdown-menu">
+        <a href="koleksi-pribadi.html">Koleksi Pribadi</a>
+        <a href="ebook.html">E-Book</a>
+        <a href="tugas.html">My Assignment</a>
+      </div>
+    </div>
+  <a href="Tabel_Perkalian.html">Tabel Perkalian</a>
+  <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
+</nav>
+
+<h1>🍪 Kebijakan Cookie Perpustakaan Aura</h1> 
+<p>Apa Itu Cookie?
+Cookie adalah file kecil yang disimpan di perangkat Anda saat mengakses situs web kami. Cookie membantu situs kami mengenali perangkat Anda dan mengingat informasi tertentu tentang kunjungan Anda, seperti preferensi tampilan atau formulir yang pernah diisi.
+
+Jenis Cookie yang Kami Gunakan
+Kami menggunakan cookie untuk meningkatkan pengalaman Anda saat menggunakan situs ini. Jenis-jenis cookie yang digunakan antara lain:
+
+Cookie yang Diperlukan
+Cookie ini penting agar situs web dapat berfungsi dengan baik, seperti mengatur navigasi halaman atau memastikan formulir berjalan dengan benar.
+
+Cookie Fungsional
+Cookie ini memungkinkan kami mengingat preferensi Anda, seperti ukuran teks atau bahasa tampilan yang dipilih.
+
+Cookie Analitik
+Cookie ini digunakan untuk memahami bagaimana pengunjung berinteraksi dengan situs. Informasi ini bersifat anonim dan membantu kami meningkatkan konten dan fitur yang kami tawarkan.
+
+Informasi Apa yang Kami Simpan?
+Kami tidak menyimpan data pribadi seperti nama atau alamat email melalui cookie. Semua informasi yang dikumpulkan melalui cookie bersifat umum dan digunakan untuk tujuan peningkatan layanan.
+
+Bagaimana Cara Mengelola Cookie?
+Anda dapat memilih untuk menerima semua cookie, menonaktifkan sebagian, atau menolak seluruhnya melalui pengaturan browser Anda. Namun, harap diperhatikan bahwa beberapa fitur situs mungkin tidak berfungsi dengan baik jika Anda menonaktifkan cookie tertentu.
+
+Untuk mengatur preferensi cookie Anda, Anda juga dapat mengklik tombol "Kelola Cookie" yang tersedia di bagian bawah situs.</p>
+
 
