--- a/beranda.html
+++ b/beranda.html
@@ -160,7 +160,7 @@
 
   <!-- Cookie Banner -->
 <div id="cookie-banner" class="cookie-banner">
-  <p>Website ini menggunakan cookie untuk meningkatkan pengalaman Anda. <a href="#">Pelajari lebih lanjut</a>.</p>
+  <p>Website ini menggunakan cookie untuk meningkatkan pengalaman Anda. <a href="cookie.html">Pelajari lebih lanjut</a>.</p>
   <button onclick="acceptAllCookies()">Terima Semua</button>
   <button onclick="openCookieSettings()">Kelola Cookie</button>
 </div>
