--- a/cookie.html
+++ b/cookie.html
@@ -36,28 +36,25 @@
   <a href="Formulir_kunjungan.html">Formulir Kunjungan</a>
 </nav>
 
-<h1>🍪 Kebijakan Cookie Perpustakaan Aura</h1> 
-<p>Apa Itu Cookie?
-Cookie adalah file kecil yang disimpan di perangkat Anda saat mengakses situs web kami. Cookie membantu situs kami mengenali perangkat Anda dan mengingat informasi tertentu tentang kunjungan Anda, seperti preferensi tampilan atau formulir yang pernah diisi.
+  <main class="container my-4">
+    <h1>🍪 Kebijakan Cookie Perpustakaan Aura</h1>
+    <p><strong>Apa Itu Cookie?</strong><br />
+    Cookie adalah file kecil yang disimpan di perangkat Anda saat mengakses situs web kami. Cookie membantu situs kami mengenali perangkat Anda dan mengingat informasi tertentu tentang kunjungan Anda, seperti preferensi tampilan atau formulir yang pernah diisi.</p>
 
-Jenis Cookie yang Kami Gunakan
-Kami menggunakan cookie untuk meningkatkan pengalaman Anda saat menggunakan situs ini. Jenis-jenis cookie yang digunakan antara lain:
+    <p><strong>Jenis Cookie yang Kami Gunakan</strong><br />
+    Kami menggunakan cookie untuk meningkatkan pengalaman Anda saat menggunakan situs ini. Jenis-jenis cookie yang digunakan antara lain:</p>
 
-Cookie yang Diperlukan
-Cookie ini penting agar situs web dapat berfungsi dengan baik, seperti mengatur navigasi halaman atau memastikan formulir berjalan dengan benar.
+    <ul>
+      <li><strong>Cookie yang Diperlukan</strong>: Cookie ini penting agar situs web dapat berfungsi dengan baik, seperti mengatur navigasi halaman atau memastikan formulir berjalan dengan benar.</li>
+      <li><strong>Cookie Fungsional</strong>: Cookie ini memungkinkan kami mengingat preferensi Anda, seperti ukuran teks atau bahasa tampilan yang dipilih.</li>
+      <li><strong>Cookie Analitik</strong>: Cookie ini digunakan untuk memahami bagaimana pengunjung berinteraksi dengan situs. Informasi ini bersifat anonim dan membantu kami meningkatkan konten dan fitur yang kami tawarkan.</li>
+    </ul>
 
-Cookie Fungsional
-Cookie ini memungkinkan kami mengingat preferensi Anda, seperti ukuran teks atau bahasa tampilan yang dipilih.
+    <p><strong>Informasi Apa yang Kami Simpan?</strong><br />
+    Kami tidak menyimpan data pribadi seperti nama atau alamat email melalui cookie. Semua informasi yang dikumpulkan melalui cookie bersifat umum dan digunakan untuk tujuan peningkatan layanan.</p>
 
-Cookie Analitik
-Cookie ini digunakan untuk memahami bagaimana pengunjung berinteraksi dengan situs. Informasi ini bersifat anonim dan membantu kami meningkatkan konten dan fitur yang kami tawarkan.
+    <p><strong>Bagaimana Cara Mengelola Cookie?</strong><br />
+    Anda dapat memilih untuk menerima semua cookie, menonaktifkan sebagian, atau menolak seluruhnya melalui pengaturan browser Anda. Namun, harap diperhatikan bahwa beberapa fitur situs mungkin tidak berfungsi dengan baik jika Anda menonaktifkan cookie tertentu.</p>
 
-Informasi Apa yang Kami Simpan?
-Kami tidak menyimpan data pribadi seperti nama atau alamat email melalui cookie. Semua informasi yang dikumpulkan melalui cookie bersifat umum dan digunakan untuk tujuan peningkatan layanan.
-
-Bagaimana Cara Mengelola Cookie?
-Anda dapat memilih untuk menerima semua cookie, menonaktifkan sebagian, atau menolak seluruhnya melalui pengaturan browser Anda. Namun, harap diperhatikan bahwa beberapa fitur situs mungkin tidak berfungsi dengan baik jika Anda menonaktifkan cookie tertentu.
-
-Untuk mengatur preferensi cookie Anda, Anda juga dapat mengklik tombol "Kelola Cookie" yang tersedia di bagian bawah situs.</p>
-
-
+    <p>Untuk mengatur preferensi cookie Anda, Anda juga dapat mengklik tombol <strong>"Kelola Cookie"</strong> yang tersedia di bagian bawah situs.</p>
+  </main>
