--- a/beranda.html
+++ b/beranda.html
@@ -163,6 +163,7 @@
   <p>Website ini menggunakan cookie untuk meningkatkan pengalaman Anda. <a href="cookie.html">Pelajari lebih lanjut</a>.</p>
   <button onclick="acceptAllCookies()">Terima Semua</button>
   <button onclick="openCookieSettings()">Kelola Cookie</button>
+  <button onclick="declineallcookies()">Tolak Semua Cookie</button>
 </div>
 
 <!-- Cookie Settings Modal -->
